--- a/examples.ipynb
+++ b/examples.ipynb
@@ -17,126 +17,38 @@
     {
       "cell_type": "code",
       "source": [
-        "import tf_idf\n",
-        "import ulysses\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 348
-        },
-        "id": "p_0j9gIr2A6Z",
-        "outputId": "39ddeb68-15c6-49d6-81cb-94f72bf45870"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'tf_idf'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-6f2b6a97b5e6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtf_idf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mulysses\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tf_idf'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tf_idf import TFIDF\n",
-        "from ulysses import load_text, word_frequency, find_word_context\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 348
-        },
-        "id": "Qn_Z4cY24Q4-",
-        "outputId": "6dafbd87-2d05-4fa8-e34c-a5df88dd8879"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'tf_idf'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-071243cc6e7f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtf_idf\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTFIDF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mulysses\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_text\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_frequency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfind_word_context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tf_idf'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "url = 'https://www.gutenberg.org/files/4300/4300-h/4300-h.htm#chap01'\n",
-        "text = ulysses.load_text(url)\n",
-        "freq = ulysses.word_frequency(text)\n",
+        "# Импортируем нужные функции и класс\n",
+        "from tf_idf import TfIdfCalculator\n",
+        "from ulysses import load_chapter_text, word_frequency, find_word_context\n",
+        "\n",
+        "# 1. Загрузка и анализ текста\n",
+        "url = 'https://www.gutenberg.org/files/4300/4300-h/4300-h.htm'\n",
+        "chapter_text = load_chapter_text(url)\n",
+        "freq = word_frequency(chapter_text)\n",
+        "print(\"10 самых частых слов в 1-й главе:\")\n",
         "print(freq.most_common(10))\n",
         "\n",
-        "contexts = ulysses.find_word_context(text, 'ulysses', 5, 5, cut_length=True)\n",
+        "# 2. Поиск контекста слова\n",
+        "contexts = find_word_context(chapter_text, 'ulysses', left_context=5, right_context=5, cut_length=True)\n",
+        "print(f\"Найдено {len(contexts)} вхождений слова 'ulysses'\")\n",
         "\n",
+        "# 3. Работа с TfIdfCalculator\n",
         "documents = [\n",
         "    \"This is the first document.\",\n",
         "    \"This document is the second document.\",\n",
         "    \"And this is the third one.\",\n",
         "    \"Is this the first document?\"\n",
         "]\n",
-        "tfidf = TFIDF(documents)\n",
-        "print(tfidf.get_tf('document', 1))\n",
-        "print(tfidf.get_idf('document', 1))\n",
-        "print(tfidf.get_tf_idf('document', 1))\n"
+        "tfidf = TfIdfCalculator(documents)\n",
+        "print(\"TF слова 'document' в документе 1:\", tfidf.get_tf('document', 1))\n",
+        "print(\"IDF слова 'document':\", tfidf.get_idf('document'))\n",
+        "print(\"TF-IDF слова 'document' в документе 1:\", tfidf.get_tf_idf('document', 1))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 222
-        },
-        "id": "h7aWLpe35zhF",
-        "outputId": "65b1ce02-cce6-4332-900e-1d720517df01"
+        "id": "Iujtp0bOLgnB"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'ulysses' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-82cbd51e6f6c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://www.gutenberg.org/files/4300/4300-h/4300-h.htm#chap01'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mulysses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mulysses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_frequency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_common\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'ulysses' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
